--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "node-fetch": "^3.3.2",
-    "puppeteer": "^24.4.0",
-    "winston": "^3.17.0"
+    "puppeteer": "^24.4.0"
   }
 }
